--- a/index.html
+++ b/index.html
@@ -65,12 +65,14 @@
     </section>
 
     <script>
-        const VESRSION = ["0.8.2.6"]
+        const VESRSION = ["0.8.2.6", "0.10.0.0"]
         const LINKS = [
             ["https://drive.google.com/file/d/1c1TbrwhdmdxkizAJk_BY6gpY5uOTJHbb/view?usp=drivesdk",
              "https://nofilebol.netlify.app/"],
+            ["https://drive.google.com/file/d/1v5Mkd0ioocSGGxPbXwOLzAoRcxMjdqsD/view?usp=drivesdk",
+             "https://nofilebol.netlify.app/"]
         ]
-        const ERRORS = ["beta"]
+        const ERRORS = ["beta", "beta"]
         const len = VESRSION.length
         if(len == LINKS.length){
             console.log("Building!")
