--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             color: red;
         }
     </style>
-    <title>Download boloto</title>
+    <title>Download Bigi</title>
 </head>
 <body>
     <h1>Welcome to Bigi downloader</h1>
